src/objects/sf4twitter__Twitter_Conversation__c.object
<CustomObject>
    <fields>
        <fullName>sf4twitter__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Twitter_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Attachments__c</fullName>
        <label>Attachments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Author_External_Id__c</fullName>
        <label>Author External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Author_Name__c</fullName>
        <label>Author Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Author_Real_Name__c</fullName>
        <defaultValue>&apos;Author information not available (User probably has Plataform option disabled in Facebook). Reply may not work correctly.&apos;</defaultValue>
        <description>Author&apos;s name</description>
        <label>Author Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Author_URL__c</fullName>
        <label>Author URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Case_Created__c</fullName>
        <formula>IF( sf4twitter__Case__c &lt;&gt;null, HYPERLINK(&quot;/&quot; &amp; sf4twitter__Case__c,IMAGE( &quot;/img/icon/cases32.png&quot; , sf4twitter__Case__c)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Link Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Twitter_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Chatter_Post_Link__c</fullName>
        <formula>IF( sf4twitter__Chatter_Post__c &lt;&gt;null, HYPERLINK( &quot;_ui/core/userprofile/UserProfilePage?u=&quot; &amp;  $User.Id  &amp; &quot;&amp;ChatterFeedItemId=&quot; &amp; sf4twitter__Chatter_Post__c,  sf4twitter__Chatter_Post__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Post</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Chatter_Post__c</fullName>
        <label>Chatter Post Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Collected_Comments__c</fullName>
        <label>Collected Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Contact_Created__c</fullName>
        <formula>IF( sf4twitter__Contact__c &lt;&gt;null, HYPERLINK(&quot;/&quot; &amp; sf4twitter__Contact__c,IMAGE(&quot;/img/icon/contacts32.png&quot;, sf4twitter__Contact__c)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Link Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Twitter_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Content__c</fullName>
        <label>Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Direct_Message__c</fullName>
        <label>Direct Message</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Download_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Download Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Twitter_Conversations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Facebook_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facebook Page</label>
        <referenceTo>sf4twitter__Fcbk_Page__c</referenceTo>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__First_Attachment_Height__c</fullName>
        <label>First Attachment Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__First_Attachment_Image_Preview__c</fullName>
        <formula>IF(ISBLANK(sf4twitter__First_Attachment_Url__c), &apos;&apos;,

HYPERLINK( IF(ISBLANK(sf4twitter__First_Attachment_Source_Video__c), sf4twitter__First_Attachment_Url__c, sf4twitter__First_Attachment_Source_Video__c) , IMAGE(IF(ISBLANK(sf4twitter__First_Attachment_Source__c),sf4twitter__First_Attachment_Url__c, sf4twitter__First_Attachment_Source__c), sf4twitter__First_Attachment_Url__c, 60,  60), &apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Attachment Image Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__First_Attachment_Image__c</fullName>
        <formula>IF(ISBLANK(sf4twitter__First_Attachment_Url__c), &apos;&apos;,

HYPERLINK( IF(ISBLANK(sf4twitter__First_Attachment_Source_Video__c), sf4twitter__First_Attachment_Url__c, sf4twitter__First_Attachment_Source_Video__c) , IMAGE(IF(ISBLANK(sf4twitter__First_Attachment_Source__c),sf4twitter__First_Attachment_Url__c, sf4twitter__First_Attachment_Source__c), sf4twitter__First_Attachment_Url__c, IF( sf4twitter__First_Attachment_Height__c &gt; 480 , 480, sf4twitter__First_Attachment_Height__c), 
IF( sf4twitter__First_Attachment_Width__c &gt; 640, 640, sf4twitter__First_Attachment_Width__c)), &apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Attachment Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__First_Attachment_Name__c</fullName>
        <label>First Attachment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__First_Attachment_Source_Video__c</fullName>
        <label>First Attachment Source Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__First_Attachment_Source__c</fullName>
        <label>First Attachment Source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__First_Attachment_Url__c</fullName>
        <label>First Attachment Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__First_Attachment_Width__c</fullName>
        <label>First Attachment Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Follower_Count__c</fullName>
        <label>Follower Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Following_Count__c</fullName>
        <label>Following Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Geo_Coordinates__c</fullName>
        <description>Geo Coordinates defined by Geo Information</description>
        <label>Geo Coordinates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Image__c</fullName>
        <label>Avatar Icon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__In_Reply_To_Status_Id__c</fullName>
        <label>Replied Conversation&apos;s External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__In_Reply_To_User_Id__c</fullName>
        <label>Replied User&apos;s External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__IsDirectMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Direct Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Is_Geo_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Geo Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Number__c</fullName>
        <label>Klout Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Score__c</fullName>
        <formula>IF( ABS( sf4twitter__Klout_Number__c )  &gt; 0, TEXT( sf4twitter__Klout_Number__c ) + &apos;  &apos; + IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Klout_Score_logo__c,&apos;Klout&apos;,17,90), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Klout Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Lead_Created__c</fullName>
        <formula>IF( sf4twitter__Lead__c &lt;&gt;null, HYPERLINK(&quot;/&quot; &amp; sf4twitter__Lead__c,IMAGE(&quot;/img/icon/leads32.png&quot;, sf4twitter__Lead__c)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Link Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Twitter_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Likes_Link__c</fullName>
        <formula>IF( ISPICKVAL(sf4twitter__Type__c , &apos;Private Message&apos;),
IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Like_Me_Icon_Url__c,&apos;like&apos;,16,16) + &apos; &apos; +
HYPERLINK(
		&apos;javascript:alert(&quot;&apos; + $Label.sf4twitter__FACEBOOK_PUBLIC_ONLY + &apos;&quot;)&apos;,		
		$Label.sf4twitter__Like
	),

IF( ISPICKVAL(sf4twitter__Type__c , &apos;Outbound Private Message&apos;),
IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Like_Me_Icon_Url__c,&apos;like&apos;,16,16) + &apos; &apos; +
HYPERLINK(
		&apos;javascript:alert(&quot;&apos; + $Label.sf4twitter__FACEBOOK_PUBLIC_ONLY + &apos;&quot;)&apos;,		
		$Label.sf4twitter__Like
),
IF(sf4twitter__User_Likes__c,
	HYPERLINK(
		IF(ISPICKVAL(sf4twitter__Origin__c, &apos;Facebook&apos;),
			&apos;javascript:if(window.location.href.indexOf(&quot;emptyHtmlDoc.html&quot;) &gt;= 0) {parent.location= &quot;/apex/sf4twitter__FcbkFeatures?op=unlike&amp;records=&apos; + Id + &apos;&amp;retURL=&quot; + encodeURIComponent(parent.location);} else {window.location= &quot;/apex/sf4twitter__FcbkFeatures?op=unlike&amp;records=&apos; + Id + &apos;&amp;retURL=&quot; + encodeURIComponent(window.location);} &apos;,
			&apos;javascript:alert(&quot;&apos; + $Label.sf4twitter__Like_Error_Message + &apos;&quot;)&apos;
		),
		$Label.sf4twitter__Unlike, &apos;_self&apos;
	) + &apos; &apos; +
	CASE(sf4twitter__Likes__c,
		1, $Label.sf4twitter__You_Like_This,
		2, $Label.sf4twitter__You_And_1_Like_This,
		SUBSTITUTE($Label.sf4twitter__You_And_Others_Like_This, &apos;{0}&apos;, TEXT(sf4twitter__Likes__c - 1))
	)
,
	IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Like_Me_Icon_Url__c,&apos;like&apos;,16,16) + &apos; &apos; +
	HYPERLINK(
		IF(ISPICKVAL(sf4twitter__Origin__c, &apos;Facebook&apos;),
			&apos;javascript:if(window.location.href.indexOf(&quot;emptyHtmlDoc.html&quot;) &gt;= 0) {parent.location= &quot;/apex/sf4twitter__FcbkFeatures?op=like&amp;records=&apos; + Id + &apos;&amp;retURL=&quot; + encodeURIComponent(parent.location);} else {window.location= &quot;/apex/sf4twitter__FcbkFeatures?op=like&amp;records=&apos; + Id + &apos;&amp;retURL=&quot; + encodeURIComponent(window.location);} &apos;,
			&apos;javascript:alert(&quot;&apos; + $Label.sf4twitter__Like_Error_Message + &apos;&quot;)&apos;
		),
		$Label.sf4twitter__Like, &apos;_self&apos;
	) + &apos; &apos; + 
	CASE(sf4twitter__Likes__c,
		0, &apos;&apos;,
		1, $Label.sf4twitter__One_Like,
		SUBSTITUTE($Label.sf4twitter__Multiple_Likes, &apos;{0}&apos;, TEXT(sf4twitter__Likes__c))
	)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Likes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Likes__c</fullName>
        <label>Likes Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Link_Shared__c</fullName>
        <label>Link Shared</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Negative_Tweets__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Negative Tweets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Neutral_Tweets__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Neutral Tweets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__New_Case__c</fullName>
        <description>Creates a new Case for this Conversation regardles of its relationship to other Conversations and Cases</description>
        <formula>HYPERLINK(&apos;/apex/sf4twitter__TwitterToCase?records=&apos;+Id+&apos;&amp;retUrl=/&apos;+Id, $Label.sf4twitter__CREATE_NEW_CASE, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Creates a new Case for this Conversation regardles of its relationship to other Conversations and Cases</inlineHelpText>
        <label>New Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Origin_Date__c</fullName>
        <label>Origin Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Origin_Icon__c</fullName>
        <formula>IMAGE(
  IF(ISPICKVAL(sf4twitter__Origin__c, &apos;Facebook&apos;),
    $Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Facebook_Icon_Url__c ,
    $Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Twitter_Icon_Url__c ), 
  TEXT(sf4twitter__Origin__c) , 32, 32)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Origin__c</fullName>
        <label>Origin Value</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__ParentConversation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentConversation (deprecated)</label>
        <referenceTo>sf4twitter__Twitter_Conversation__c</referenceTo>
        <relationshipLabel>Conversations (deprecated)</relationshipLabel>
        <relationshipName>Twitter_Conversations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>sf4twitter__Twitter_Conversation__c</referenceTo>
        <relationshipLabel>Child Conversations</relationshipLabel>
        <relationshipName>Twitter_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Place_Coordinates__c</fullName>
        <description>Place Coordinates defined by Geo Information</description>
        <label>Place Coordinates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Place__c</fullName>
        <description>Place full name from Geo Information</description>
        <label>Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Positive_Tweets__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Positive Tweets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Published_Date__c</fullName>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Replied_Status__c</fullName>
        <formula>HYPERLINK(
&apos;javascript:window.location=&quot;/apex/sf4twitter__TwitterFindConversation?external_id=&apos; +  sf4twitter__In_Reply_To_Status_Id__c + &apos;&quot;;&apos;,
sf4twitter__In_Reply_To_Status_Id__c,
&apos;_blank&apos;
)</formula>
        <label>Replied Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Replied_User__c</fullName>
        <formula>HYPERLINK(
&apos;javascript:window.location=&quot;/apex/sf4twitter__TwitterFindContact?external_id=&apos; +  sf4twitter__In_Reply_To_User_Id__c + &apos;&quot;;&apos;,
sf4twitter__In_Reply_To_User_Id__c,
&apos;_blank&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replied User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Solution_Created__c</fullName>
        <formula>IF( sf4twitter__Solution__c &lt;&gt;null, HYPERLINK(&quot;/&quot; &amp; sf4twitter__Solution__c,IMAGE( &quot;/img/icon/solutions32.png&quot; , sf4twitter__Solution__c)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Link Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipName>Twitter_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Actioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solved by Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ignored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark as reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Direct Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound @reply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__ThreadPMId__c</fullName>
        <description>Facebook Private Message Thread Id</description>
        <label>ThreadPMId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Total_Comments__c</fullName>
        <label>Total Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Tweet_Sentiment__c</fullName>
        <formula>IF( sf4twitter__Negative_Tweets__c =1,  IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Negative&quot;) ,  IF( sf4twitter__Neutral_Tweets__c =1,  IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Neutral&quot;) ,  IF( sf4twitter__Positive_Tweets__c =1,  IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Positive&quot;) , &quot;&quot;) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversation Sentiment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__TwitterID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Twitter Account</label>
        <referenceTo>sf4twitter__Twitter_Account__c</referenceTo>
        <relationshipName>Twitter_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Id_Number__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter Id Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Image__c</fullName>
        <formula>HYPERLINK(sf4twitter__Author_URL__c ,
IF( ( NOT( ISBLANK( sf4twitter__Image__c) )),IMAGE( sf4twitter__Image__c , sf4twitter__Author_URL__c, 48, 48),sf4twitter__Author_URL__c )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Twitter Search</label>
        <referenceTo>sf4twitter__Twitter_Search__c</referenceTo>
        <relationshipName>Twitter_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Source__c</fullName>
        <label>Twitter Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Type__c</fullName>
        <description>The API source of the record.  This can be @Replies, Messages, or Search</description>
        <inlineHelpText>The API source of the record.  This can be @Replies, Messages, or Search</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>@Replies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Direct Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound reply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wall Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Private Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reply to comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound reply to comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Uncollected_Comments__c</fullName>
        <formula>IF( sf4twitter__Total_Comments__c &gt; sf4twitter__Collected_Comments__c, sf4twitter__Total_Comments__c  - sf4twitter__Collected_Comments__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If you have uncollected comments, click Get Comments to retrieve the remaining comments.</inlineHelpText>
        <label>Uncollected Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Uncollected_Schedule__c</fullName>
        <label>Uncollected Schedule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Updated_Date__c</fullName>
        <label>Updated Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__User_Bio__c</fullName>
        <label>User Bio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__User_Creation_Date__c</fullName>
        <label>User Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__User_Last_tweet__c</fullName>
        <label>User Last tweet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__User_Likes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Likes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__User_Status_count__c</fullName>
        <label>User Status Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__paging__c</fullName>
        <label>paging</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conversation</label>
    <listViews>
        <fullName>PQRS_Facebook_Conversations</fullName>
        <columns>NAME</columns>
        <columns>sf4twitter__Message__c</columns>
        <columns>sf4twitter__Origin_Date__c</columns>
        <columns>sf4twitter__Author_Real_Name__c</columns>
        <columns>sf4twitter__Type__c</columns>
        <columns>sf4twitter__Status__c</columns>
        <columns>sf4twitter__Case__c</columns>
        <columns>sf4twitter__Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf4twitter__Origin__c</field>
            <operation>equals</operation>
            <value>Facebook</value>
        </filters>
        <filters>
            <field>sf4twitter__Facebook_Page__c</field>
            <operation>contains</operation>
            <value>PQRS</value>
        </filters>
        <filters>
            <field>sf4twitter__Case__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>sf4twitter__Status__c</field>
            <operation>notEqual</operation>
            <value>Ignored</value>
        </filters>
        <label>PQRS Facebook Conversations</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>sf4twitter__Actionable_Convs</fullName>
        <columns>sf4twitter__Origin_Date__c</columns>
        <columns>sf4twitter__Twitter_Image__c</columns>
        <columns>NAME</columns>
        <columns>sf4twitter__Content__c</columns>
        <columns>sf4twitter__First_Attachment_Image_Preview__c</columns>
        <columns>sf4twitter__Author_Name__c</columns>
        <columns>sf4twitter__Contact__c</columns>
        <columns>sf4twitter__Lead__c</columns>
        <columns>sf4twitter__Status__c</columns>
        <columns>sf4twitter__Type__c</columns>
        <columns>sf4twitter__Case_Created__c</columns>
        <columns>sf4twitter__Solution_Created__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf4twitter__Status__c</field>
            <operation>equals</operation>
            <value>New,Download In Progress</value>
        </filters>
        <filters>
            <field>sf4twitter__Type__c</field>
            <operation>notEqual</operation>
            <value>Registered Account</value>
        </filters>
        <label>New Tweets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sf4twitter__All</fullName>
        <columns>NAME</columns>
        <columns>sf4twitter__Message__c</columns>
        <columns>sf4twitter__Twitter_Image__c</columns>
        <columns>sf4twitter__Author_Real_Name__c</columns>
        <columns>sf4twitter__Origin_Date__c</columns>
        <columns>sf4twitter__Origin_Icon__c</columns>
        <columns>sf4twitter__Type__c</columns>
        <columns>sf4twitter__Status__c</columns>
        <columns>sf4twitter__Contact__c</columns>
        <columns>sf4twitter__Lead__c</columns>
        <columns>sf4twitter__Case__c</columns>
        <columns>sf4twitter__Total_Comments__c</columns>
        <columns>sf4twitter__Collected_Comments__c</columns>
        <columns>sf4twitter__Uncollected_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sf4twitter__All_Tweets</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>sf4twitter__Origin_Date__c</columns>
        <columns>sf4twitter__Twitter_Image__c</columns>
        <columns>NAME</columns>
        <columns>sf4twitter__Author_Name__c</columns>
        <columns>sf4twitter__Case_Created__c</columns>
        <columns>sf4twitter__Content__c</columns>
        <columns>sf4twitter__Contact__c</columns>
        <columns>sf4twitter__Lead__c</columns>
        <columns>sf4twitter__Status__c</columns>
        <columns>sf4twitter__Type__c</columns>
        <columns>sf4twitter__Solution_Created__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf4twitter__Type__c</field>
            <operation>notEqual</operation>
            <value>Registered Account</value>
        </filters>
        <label>All Tweets</label>
    </listViews>
    <listViews>
        <fullName>sf4twitter__Facebook_Conversations</fullName>
        <columns>NAME</columns>
        <columns>sf4twitter__Message__c</columns>
        <columns>sf4twitter__First_Attachment_Image_Preview__c</columns>
        <columns>sf4twitter__Twitter_Image__c</columns>
        <columns>sf4twitter__Author_Real_Name__c</columns>
        <columns>sf4twitter__Origin_Date__c</columns>
        <columns>sf4twitter__Origin_Icon__c</columns>
        <columns>sf4twitter__Type__c</columns>
        <columns>sf4twitter__Status__c</columns>
        <columns>sf4twitter__Contact__c</columns>
        <columns>sf4twitter__Lead__c</columns>
        <columns>sf4twitter__Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf4twitter__Origin__c</field>
            <operation>equals</operation>
            <value>Facebook</value>
        </filters>
        <label>Facebook Conversations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sf4twitter__Facebook_Private_Messages</fullName>
        <columns>NAME</columns>
        <columns>sf4twitter__Message__c</columns>
        <columns>sf4twitter__First_Attachment_Image_Preview__c</columns>
        <columns>sf4twitter__First_Attachment_Name__c</columns>
        <columns>sf4twitter__Twitter_Image__c</columns>
        <columns>sf4twitter__Author_Real_Name__c</columns>
        <columns>sf4twitter__Origin_Date__c</columns>
        <columns>sf4twitter__Origin_Icon__c</columns>
        <columns>sf4twitter__Type__c</columns>
        <columns>sf4twitter__Status__c</columns>
        <columns>sf4twitter__Case__c</columns>
        <columns>sf4twitter__Contact__c</columns>
        <columns>sf4twitter__Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf4twitter__Origin_Icon__c</field>
            <operation>contains</operation>
            <value>Facebook</value>
        </filters>
        <filters>
            <field>sf4twitter__Type__c</field>
            <operation>contains</operation>
            <value>Private Message</value>
        </filters>
        <label>Facebook Private Messages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sf4twitter__Inbound_Messages</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>sf4twitter__Published_Date__c</columns>
        <columns>NAME</columns>
        <columns>sf4twitter__Type__c</columns>
        <columns>sf4twitter__Content__c</columns>
        <columns>sf4twitter__Case_Created__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf4twitter__Type__c</field>
            <operation>equals</operation>
            <value>Direct Message,@Replies</value>
        </filters>
        <label>Inbound Messages</label>
    </listViews>
</CustomObject>